DB-6504: some cleanup of steps